# corode

./: .gitignore  Cargo.toml  DOCUMENTATION.md  README.md  ROADMAP.md  TECHNICAL_DOCUMENTATION.md  corode_strategie_daniel.docx  prototype_fund_antrag.docx  trap.S  vision_2_0.docx
.cargo/: config.toml
.idx/: dev.nix
FINALE_VERSIONEN/: ARCHITEKTUR_KOMPLETT.md  FILETREE_FINAL.md  TRUMP_KOMPLETT.md  ZUSAMMENFASSUNG.docx
docs/: EASTEREGGS.md  PMP_VEKTOR_MAP.md  REPOSITORY_STRUCTURE.md
sidekernels/ai/: .gitkeep
src/: EASTEREGGS-1.md  block.rs  commands.rs  cond.rs  main.rs  pmp.rs  state.rs  terminal.rs  trap.rs  uart.rs
